...
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FlowCrypt</string>
    <string name="support_email" translatable="false">human@flowcrypt.com</string>

    <string name="compose">Compose</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_compose_security_email">Compose secure message</string>
    <string name="prompt_compose_standard_email">Compose standard message</string>
    <string name="text_must_not_be_empty">Error: \"%1$s\" must not be empty!</string>
    <string name="send">Send</string>
    <string name="error_email_is_not_valid">Error: invalid email</string>
    <string name="internet_connection_is_not_available">Error: no internet</string>
    <string name="unknown_error">Unknown error</string>
    <string name="privacy">Privacy</string>
    <string name="terms">Terms</string>
...
    <plurals name="found_backup_of_your_account_key">
        <item quantity="one">We found a backup of your key</item>
        <item quantity="other">We found backups of %1$d keys</item>
    </plurals>
    <string name="enter_your_pass_phrase">Enter your pass phrase</string>
    <string name="passphrase_must_be_non_empty">Pass phrase cannot be empty</string>
    <string name="your_message_must_be_non_empty">Message should not be empty</string>
    <string name="password_is_incorrect">Incorrect pass phrase, please try again</string>
    <string name="use_another_account">Use another account</string>
    <string name="reply_all">Reply All</string>
    <string name="please_wait_while_backup_will_be_saved">Making a backup, please wait</string>
    <string name="please_wait_while_message_will_be_sent">Sending message, please wait</string>
    <string name="please_wait_while_information_about_recipients_will_be_updated">Loading information about recipients, please wait</string>
...
    <string name="hint_clipboard_is_empty">Your clipboard is empty. Please find your %1$s Key where you are storing it, select the text and copy it. After that, return back to %2$s.</string>
    <string name="file_has_wrong_pgp_structure">The content of your file does not look like a valid PGP %1$s Key.</string>
    <string name="source_has_wrong_pgp_structure">The content which you provided does not look like a valid PGP %1$s Key.</string>
    <string name="key_successfully_imported">Key(s) successfully imported</string>
    <string name="the_key_successfully_imported">Key successfully imported</string>
    <string name="attach_file">Attach file</string>
    <string name="switch_to_standard_email">Switch to standard email</string>
    <string name="switch_to_secure_email">Switch to secure email</string>
    <string name="this_message_will_not_be_encrypted">This message will not be encrypted</string>
    <string name="import_their_public_key">Import their Public Key</string>
    <string name="copy_from_other_contact">Copy from other contact</string>
    <string name="template_remove_recipient">Remove %1$s</string>
    <string name="protect_with_password">Protect with password</string>
    <string name="recipient_does_not_use_pgp">Recipient doesn\'t use PGP</string>
    <string name="reply">Reply</string>
    <string name="import_public_key">Import Public Key</string>
    <string name="private_">Private</string>
    <string name="public_">Public</string>
...
    <string name="can_not_connect_to_the_server">Cannot connect to the server</string>
    <string name="cancel">Cancel</string>
    <string name="waiting_to_load">Waiting to load</string>
    <string name="download_complete">Download complete</string>
    <string name="template_attachment_already_loading">Attachment \"%1$s\" is already loading</string>
    <string name="can_not_attach_this_file">Can\'t attach this file!</string>
    <string name="template_warning_max_total_attachments_size">Total size of added attachments should be under
        %1$s</string>
    <string name="other_email_provider">Other email provider</string>
    <string name="account_info">Account info</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
...
    <string name="loading_backups">Loading backups</string>
    <string name="submitted_can_receive_encrypted_email">Submitted, can receive encrypted email.</string>
    <string name="no_public_key_recorded">No public key recorded. Your contacts may not know that you are using
        encryption.</string>
    <string name="wrong_public_key_recorded">Wrong public key recorded. Incoming encrypted email may not be readable.</string>
    <string name="use_public_key_from">Use Public key from</string>
    <string name="key_successfully_copied">Key successfully copied</string>
    <string name="search">Search</string>
    <string name="have_not_any_other_key">I don\'t have any other key</string>
    <string name="message_was_encrypted_for_wrong_key">Hello,\n\nI was not able to read your encrypted message because
        it was encrypted for a wrong key.\n\nMy current public key is attached below. Please update your records and
        send me a new encrypted message.\n\nThank you</string>
    <string name="please_select_key">Please select a key</string>
...
    <string name="clipped_message_too_large">[clipped - message too large]</string>
    <string name="feedback">Feedback</string>
    <string name="include_app_screenshot">Include app screenshot</string>
    <string name="touch_to_preview_and_edit">Touch to preview and edit</string>
    <string name="screenshot">Screenshot</string>
    <string name="report_problem">Report problem</string>
    <string name="include_public_key">Include Public Key</string>
    <plurals name="tell_sender_to_update_their_settings">
        <item quantity="one">You should tell the sender to update their settings and send a
        new message.</item>
        <item quantity="other">You should tell the sender to update their settings and send a
        new message.\n\nChoose Public Key to share</item>
    </plurals>
...
