...
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuActionAttachFile"
        android:icon="@mipmap/ic_action_attach_file"
        android:title="@string/attach_file"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuActionSend"
        android:icon="@mipmap/ic_action_send"
        android:title="@string/send"
        app:showAsAction="ifRoom" />
</menu>
